# AI-HOMELAB

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README_ENG.md  ROADMAP.md  SECURITY.md  robots.txt  sitemap.xml
.github/workflows/: ci.yml
benchmarks/: 2026-07-07_BeeLlama_DFlash_Setup_and_Benchmark.md  Local_moe_optimization.md  Qwen3.6-35B-A3B-Uncensored_benchmark_report.md  beellama_dflash_turboquant.md  gemma4_26b_optimization.md  hardware_efficiency.md  large_moe_optimization.md  performance_throughput_2026-07.md  quality_agentic_reasoning_2026-07.md
configs/ollama/: .env.example  README.md  docker-compose.yml
configs/production-agent-stack/: README.md  docker-compose.yml  litellm-config.yaml
docs/: templates.md  templates_ENG.md
docs/plans/: 2026-06-01-clickable-repo-structure-design.md  2026-06-01-free-ai-tools-and-lifehacks-integration.md  2026-06-01-model-isolation-design.md  2026-06-01-model-vetting-criteria.md
docs/research/: ai-landscape-july-2026.md  ai-landscape-june-2026.md  ai-landscape-may-2026.md  free-ai-tools-lifehacks.md  free-ai-tools-lifehacks_ENG.md  local-ai-experience-june-2026.md  nomad-odysseus-analysis.md
docs/security/: advanced_hardening.md  (+3 more)
scripts/: verify_links.py
templates/: agent_persistent_memory.py  langgraph_rag_agent.py  requirements.txt
templates/agent-code-cli/: README.md  pyproject.toml
templates/agent-code-cli/agent_code/: __init__.py  agent.py  cli.py  compact_basic.py  fs_safety.py  model.py  permissions.py  prompt_ui.py  session.py  tools.py
(+5 files in other folders)
