[project]
name = "agent-code-cli"
version = "0.1.0"
description = "A tiny educational Claude Code style coding agent CLI template."
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.103.1",
  "html2text>=2025.4.15",
  "pathspec>=1.1.1",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
agent-code = "agent_code.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_code"]
